# handson-mcp-and-agent

./: .env  .gitconfig  README.md  main.py  mcp-global-config-example.json  pyproject.toml  test_coroutines.py  test_json_loads_and_dumps.py  test_textual.py  test_type_dict.py
.windsurf/: mcp.json
code-of-conduct-app/: code-of-conduct-mcp-client.py  code-of-conduct-mcp-server.py
code_of_conduct_app/: code_of_conduct_mcp_client.py  code_of_conduct_mcp_server.py
hr-a2a-app/: hr_policy_a2a_wrapper_server.py
hr-policy-app/: hr_policy_agent.py  hr_policy_mcp_server.py  sequence-diagram.md
hr_a2a_app/: check_agent_wrapper_servers.http  hr_client_router_agent.py  hr_policy_a2a_wrapper_server.py  hr_policy_a2a_wrapper_server_test.py  hr_router_agent.py  terminal_ui.py  time-off-policy-a2a-wrapper-server.py
hr_policy_app/: architecture-diagram.md
time-off-app/: time-off-datastore.py  time_off_agent.py  time_off_mcp_server.py
time_off_app/: time_off_agent.py
utils/: log_utils.py  model_utils.py  show_splitted_documents.py
